Updated Performance Tuning (markdown)